kubernetes/Tenark.Web.ControlPlane/base/tenark-web-controlplane-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ternark-web-controlplane
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ternark-web-controlplane
  template:
    metadata:
      labels:
        app: ternark-web-controlplane
    spec:
      containers:
      - name: ternark-web-controlplane
        image: ternark-web-controlplane:v0.0.17
        resources:
          limits:
            cpu: "2"
            memory: "2048Mi"
          requests:
            cpu: "0.5"
            memory: "512Mi"
