kubernetes/Tenark.Web.ControlPlane/base/tenark-web-controlplane-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tenark-web-controlplane-service
spec:
  selector:
    app: tenark-web-controlplane-service
  ports:
    - port: 8080
      targetPort: 8080
